Major changes to Inventory changing from Inventory Item to Product. Running through tests to catch bugs. Customers and Mechanics have passed all tests.
